--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,9 +11,9 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>Formulário de HelloWorld (usando o sayhello.jsp)</div>
+        <h1>Preencha o formulário:</h1>
            <form action="sayhello.jsp" method="post">
-           <br>Idioma: <input type="radio" name="lang" value="pt" checked> Português
+           <br>Idioma preferido: <input type="radio" name="lang" value="pt" checked> Português
            <input type="radio" name="lang" value="en"> Inglês
            <input type="radio" name="lang" value="fr"> Francês
            <input type="radio" name="lang" value="de"> Alemão<br><br>
