inclusion od header and footer on index

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -10,6 +10,9 @@ and open the template in the editor.
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
+    <header>
+        <h1>Aplicativo Hello World!</h1>
+    </header>
     <body>
         <h1>Preencha o formulário:</h1>
            <form action="sayhello.jsp" method="post">
@@ -20,6 +23,8 @@ and open the template in the editor.
            Nome: <input type="text" name="nome"/><br><br>
            <input type="submit" value="Cumprimentar"/>
         </form>
-
     </body>
+    <footer>
+        <h5>UFF - Sitemas de Informação - 2022.2</h5>
+    </footer>
 </html>
