--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,7 +11,11 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <header>
-        <h1>Aplicativo Hello World!</h1>
+        <h1>
+            Aplicativo Hello World!
+            _______________________
+        </h1>
+
     </header>
     <body>
         <h1>Preencha o formulário:</h1>
@@ -25,6 +29,10 @@ and open the template in the editor.
         </form>
     </body>
     <footer>
-        <h5>UFF - Sitemas de Informação - 2022.2</h5>
+
+        <h5>
+            UFF - Sistemas de Informação - 2022.2
+            _____________________________________
+        </h5>
     </footer>
 </html>
