another small fix to the index header and footer

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -12,8 +12,8 @@ and open the template in the editor.
     </head>
     <header>
         <h1>
-            Aplicativo Hello World!
-            _______________________
+            _______________________Aplicativo Hello World!_______________________
+            <br><br><br>
         </h1>
 
     </header>
@@ -31,8 +31,9 @@ and open the template in the editor.
     <footer>
 
         <h5>
-            UFF - Sistemas de Informação - 2022.2
-            _____________________________________
+            <br><br><br><br><br><br><br><br><br><br>
+            _____________________________________UFF - Sistemas de Informação - 2022.2_____________________________________
+            <br><br>
         </h5>
     </footer>
 </html>
