--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -17,15 +17,17 @@ and open the template in the editor.
         </h1>
     </header>
     <body>
-        <h1>Preencha o formulário:</h1>
-           <form action="sayhello.jsp" method="post">
-           <br>Idioma preferido: <input type="radio" name="lang" value="pt" checked> Português
-           <input type="radio" name="lang" value="en"> Inglês
-           <input type="radio" name="lang" value="fr"> Francês
-           <input type="radio" name="lang" value="de"> Alemão<br><br>
-           Nome: <input type="text" name="nome"/><br><br>
-           <input type="submit" value="Cumprimentar"/>
-        </form>
+        <div>
+            <h1>Preencha o formulário:</h1>
+            <form action="sayhello.jsp" method="post">
+                <br>Idioma preferido: <input type="radio" name="lang" value="pt" checked> Português
+                <input type="radio" name="lang" value="en"> Inglês
+                <input type="radio" name="lang" value="fr"> Francês
+                <input type="radio" name="lang" value="de"> Alemão<br><br>
+                Nome: <input type="text" name="nome"/><br><br>
+                <input type="submit" value="Cumprimentar"/>
+            </form>
+        </div>
     </body>
     <footer>
 
