--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,13 +11,13 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <header>
-        <h1>
+        <h1 style="text-align: center;">
             _______________________Aplicativo Hello World!_______________________
             <br><br><br>
         </h1>
     </header>
     <body>
-        <div>
+        <div style="text-align: center;">
             <h1>Preencha o formulário:</h1>
             <form action="sayhello.jsp" method="post">
                 <br>Idioma preferido: <input type="radio" name="lang" value="pt" checked> Português
@@ -30,7 +30,7 @@ and open the template in the editor.
         </div>
     </body>
     <footer>
-        <h4>
+        <h4 style="text-align: center;">
             <br><br><br><br><br><br><br><br><br><br>
             _______________________________________________________UFF - Sistemas de Informação - 2022.2_______________________________________________________
             <br><br>
