get timeZone from client side implementation

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -20,6 +20,7 @@ and open the template in the editor.
         <div style="text-align: center;">
             <h1>Preencha o formulário:</h1>
             <form action="sayhello.jsp" method="post">
+                <input type="hidden" name="localTZ" >
                 <br>Idioma preferido: <input type="radio" name="lang" value="pt" checked> Português
                 <input type="radio" name="lang" value="en"> Inglês
                 <input type="radio" name="lang" value="fr"> Francês
@@ -36,4 +37,10 @@ and open the template in the editor.
             <br><br>
         </h4>
     </footer>
+    <script>
+        document.getElement('[name=localTZ]').value = getLocalTimeZone();
+        function getLocalTimeZone(){
+            return Intl.DateTimeFormat().resolvedOptions().timeZone;
+        }
+    </script>
 </html>
