fixing timezone parameter

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -20,7 +20,7 @@ and open the template in the editor.
         <div style="text-align: center;">
             <h1>Preencha o formulário:</h1>
             <form action="sayhello.jsp" method="post">
-                <input type="hidden" name="localTZ" >
+                <input type="hidden" name="local-timezone" >
                 <br>Idioma preferido: <input type="radio" name="lang" value="pt" checked> Português
                 <input type="radio" name="lang" value="en"> Inglês
                 <input type="radio" name="lang" value="fr"> Francês
