fixing timezone parameter #2

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -38,7 +38,7 @@ and open the template in the editor.
         </h4>
     </footer>
     <script>
-        document.getElement('[name=localTZ]').value = getLocalTimeZone();
+        document.getElement('[name=local-timezone]').value = getLocalTimeZone();
         function getLocalTimeZone(){
             return Intl.DateTimeFormat().resolvedOptions().timeZone;
         }
